<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/a_button2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/grey1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/a_button"
        app:layout_constraintVertical_bias="0.98" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <RadioButton
            android:id="@+id/radioButtonGlide"
            style="@style/main_activity_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center|start"
            android:text="@string/glide_url1" />

        <RadioButton
            android:id="@+id/radioButtonLoad"
            style="@style/main_activity_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/load_app_url2" />

        <RadioButton
            android:id="@+id/radioButtonRetrofit"
            style="@style/main_activity_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/retrofit_url3" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:background="#003D4B"
        android:contentDescription="@string/an_image_with_a_download_sign_on_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

    <TextView
        android:id="@+id/download_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="@+id/custom_button"
        app:layout_constraintStart_toStartOf="@+id/custom_button"
        app:layout_constraintTop_toTopOf="@+id/custom_button" />

</androidx.constraintlayout.widget.ConstraintLayout>